--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,7 +25,7 @@
   margin-bottom: 12%;
 }
 
-/* .superfont{
+/* .superfont
 } */
 .customfont {
   font-family: 'Quicksand', sans-serif !important;
